[build-system]
requires = ["setuptools>=75.0", "wheel", "twine>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "equipment"
# Version is dinamically handled by .github/workflows/publish.yml
version = "CURRENT_VERSION"
description = "The root of your next python project"
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [{ name = "Roger Vilà", email = "rogervila@me.com" }]
keywords = [
    "equipment",
    "application scaffolding",
    "scheduler",
    "dependency injection",
    "web",
]
dynamic = ["dependencies"]

requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
equipment = "equipment:cli"

[project.urls]
Homepage = "https://github.com/rogervila/equipment"
Issues = "https://github.com/rogervila/equipment/issues"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.package-data]
"*" = [
    "*.py",
    "*.ini",
    "*.yaml",
    "*.yml",
    "*.json",
    "*.md",
    "*.gitignore",
    "*.gitattributes",
    "*.coveragerc",
    "*.editorconfig",
    "*.example",
    "*.toml",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["equipment*"]
namespaces = true
